--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "admin-cp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^2.0.18",
+    "@react-email/components": "^0.0.12",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.1",
+    "firebase": "^10.7.1",
+    "mongoose": "^8.0.1",
+    "negotiator": "^0.6.3",
+    "next": "14.0.3",
+    "next-auth": "^4.24.5",
+    "next-plausible": "^3.12.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-infinite-scroll-component": "^6.1.0",
+    "resend": "^2.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "typescript": "^5"
   }
 }
