--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-infinite-scroll-component": "^6.1.0",
-    "resend": "^2.0.0"
+    "resend": "^2.0.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
