--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.1",
     "firebase": "^10.7.1",
+    "flag-icons": "^7.1.0",
     "mongoose": "^8.0.1",
     "negotiator": "^0.6.3",
     "next": "14.0.3",
@@ -35,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
